syntax = "proto3";

message LsAtom{
    repeated int32 idx_atom = 1;
}

message TupMolLsatom{
    int32 idx_mol = 1;
    LsAtom ls_atom = 2;
    LsAtom ls_nh = 3;
    LsAtom ls_np = 4;
}

message LsDicmollsatom{
    repeated TupMolLsatom dic_mol_atoms = 1;
}

message DicScaffoldLs{
    map<int32, LsDicmollsatom> idx_scaffold = 8;
}

message DicSmIdx{
    map<string, int32> sm_sc = 7;
}

message DicIdxSm{
    map<int32, string> sm_sc = 7;
}

message DicIdxLs{
    map<int32, LsDicmollsatom> smiles_scaffold = 8;
}